fix: text changes

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
                   <p>❝ Monks, I have never seen anyone becoming poor by offering alms in this journey of sansara.❞</p>
                   <p class="text-right">~ Lord Bhuddha</p>
                   <div class="row">
-                    <div class="col-lg-2" style="background-color: #652097;height: 60px;padding-top: 15px;border-top-left-radius: 20px;border-bottom-left-radius: 20px;">
+                    <div class="col-lg-2" style="background-color: #652097;height: 100px;padding-top: 35px;border-top-left-radius: 20px;border-bottom-left-radius: 20px;">
                       USD 8,200
                     </div>
-                    <div class="col-lg-4" style="background-color: #652097;height: 60px;padding-top: 15px;">
+                    <div class="col-lg-4" style="background-color: #652097;height: 100px;padding-top: 35px;">
                       <div class="w3-light-grey w3-round">
                         <div id="myBar" class="w3-green w3-round" style="height:24px;width:0"></div>
                       </div>
                     </div>
-                    <div class="col-lg-2" style="background-color: #652097;height: 60px;padding-top: 15px;border-top-right-radius: 20px;border-bottom-right-radius: 20px;">
+                    <div class="col-lg-2" style="background-color: #652097;height: 100px;padding-top: 35px;border-top-right-radius: 20px;border-bottom-right-radius: 20px;">
                       USD 210,000
                     </div>
                   </div>
@@ -114,8 +114,8 @@
                     <div class="box-icon-modern">
                       <div class="box-icon-inner decorate-triangle"><span class="icon-xl linearicons-baby2 icon-primary"></span></div>
                       <div class="box-icon-caption">
-                        <h4><a href="#">Saving Children</a></h4>
-                        <p>To construct a fully completed Buddhist Monastery for Maha Sangha.</p>
+                        <h4><a href="#">Spread Good</a></h4>
+                        <p>To provide support for the lay people to follow the eight-fold path by conducting spiritual activities such as dhamma discussions and meditation programs.</p>
                       </div>
                     </div>
                   </div>
@@ -133,7 +133,7 @@
                       <div class="box-icon-inner decorate-rectangle"><span class="icon-xl linearicons-umbrella2 icon-primary"></span></div>
                       <div class="box-icon-caption">
                         <h4><a href="#">Care &amp; Protection</a></h4>
-                        <p>To provide support for the lay people to follow the eight-fold path by conducting spiritual activities such as dhamma discussions and meditation programs.</p>
+                        <p>To construct a fully completed Buddhist Monastery for Maha Sangha.</p>
                       </div>
                     </div>
                   </div>
@@ -253,7 +253,7 @@
               <div class="col-12">
                 <p class="footer-brand-name brand-name">Ekaro Foundation</p>
               </div>
-              <div class="col-12">
+              <!-- <div class="col-12">
                 <ul class="footer-minimal-nav">
                   <li><a href="about-us.html">About Us</a></li>
                   <li><a href="#">Causes</a></li>
@@ -261,8 +261,8 @@
                   <li><a href="#">Team</a></li>
                   <li><a href="contacts.html">Contacts</a></li>
                 </ul>
-              </div>
-              <div class="col-12">
+              </div> -->
+              <!-- <div class="col-12">
                 <ul class="social-list">
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-facebook" href="#"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-instagram" href="#"></a></li>
@@ -270,9 +270,9 @@
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-youtube-play" href="#"></a></li>
                   <li><a class="icon icon-sm icon-circle icon-circle-md icon-bg-white fa-pinterest-p" href="#"></a></li>
                 </ul>
-              </div>
+              </div> -->
             </div>
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Helper</span><span>.&nbsp;</span><span>All Rights Reserved.</span><span>&nbsp;</span>Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com/">Templatemonster</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Ekaro Foundation</span><span>.&nbsp;</span><span>All Rights Reserved.</span><span>&nbsp;</span></p>
           </div>
         </div>
       </footer>
